--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Routaa-Map Android SDK Examples</string>
+    <string name="routaa_access_token">PASTE_YOUR_TOKEN_HERE</string>
 </resources>
